--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrapper{
+  width: 100%;
+  font-family: sans-serif;
+  padding: 2em 0;
+}
+.title{
+  width: 100%;
+  max-width: 10em;
+  margin: 0 auto;
+  text-align: center;
+  text-transform: capitalize;
+  margin-bottom: 1em;
+}
+.section-container{
+  width: 100%;
+  height: 40em;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+}
+.content{
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  transition: all 1s ease-in-out;
+}
+.image{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.btn-container{
+  width: 100%;
+  padding: 0 1em;
+  position: absolute;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5em;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.active{
+  transform: translateX(0);
+  opacity: 1;
+}
+.prevSlide{
+  transform: translateX(-100%);
+}
+.nextSlide{
+  transform: translateX(100%);
 }
